--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -15,5 +15,32 @@ body{
 .login-box{
     position: relative;
     width: 400px;
-    
+    height: 450px;
+    background: red;
+    border-radius: 20px;
+    display: flex;
+    justify-items: center;
+    align-items: center;
 }
+
+h3{
+    font-size: 2rem;
+    color: white;
+    text-align: center;
+}
+.input-box{
+    position: relative;
+    width: 310px;
+    margin: 30px 0;
+    border-bottom: 2px solid white;
+}
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1rem;
+    color: white;
+    pointer-events: none;
+}
+
