--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,7 +1,7 @@
 
 *{
     margin: 0;
-    padding: 0;
+    padding: 8px;
     box-sizing: border-box;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
@@ -42,5 +42,44 @@ h3{
     font-size: 1rem;
     color: white;
     pointer-events: none;
+    transition: -5s;
 }
+.input-box input:focus~label,
+.input-box input:valid~label{
+    top: -5px;
 
+}
+.input-box input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1rem;
+    color: white;
+    padding: 0 35px 0 5px;
+}
+.input-box .icon{
+    position: absolute;
+    right: 10px;
+    color: white;
+    font-size: 1cm;
+    line-height: 57px;
+}
+.remember-forget{
+    margin: -15px 0 15px;
+    font-size: -9cm;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+.remember-forget label input{
+    margin-right: 3px;
+}
+.remember-forget a{
+    color: white;
+    text-decoration: none;
+}
+.remember-forget a:hover{
+    text-decoration: underline;
+}
