--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -83,3 +83,16 @@ h3{
 .remember-forget a:hover{
     text-decoration: underline;
 }
+button{
+    width: 100%;
+    height: 400px;
+    background: white;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    cursor: pointer;
+    font-size: 1cm;
+    color: black;
+    font-weight: 500;
+}
+.register-link
