--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -95,4 +95,17 @@ button{
     color: black;
     font-weight: 500;
 }
-.register-link
+.register-link{
+    font-size: .9cm;
+    color: white;
+    text-align: center;
+    margin: 25px 0 10px;
+}
+.register-link p a{
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+}
+.register-link p a:hover{
+    text-decoration: underline;
+}
