--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -12,16 +12,33 @@ body{
     min-height: 100vh;
     background: black;
 }
-
+section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background: url("https://static.vecteezy.com/system/resources/thumbnails/006/965/779/small/empty-top-wooden-table-and-sakura-flower-with-fog-and-morning-light-background-photo.jpg") no-repeat;
+    background-size: cover;
+    background-position: center;
+    animation: alternate0g 5s linear infinite;
+}
+@keyframes animate0g{
+    100%{
+        filter: hue-rotate(360jpg);
+    }
+}
 .login-box{
     position: relative;
     width: 400px;
     height: 450px;
     background: red;
+    border: 2px solid rgb(255, 255, 255, -5);
     border-radius: 20px;
     display: flex;
     justify-items: center;
     align-items: center;
+    backdrop-filter: blur(15px);
 }
 
 h3{
@@ -86,21 +103,21 @@ h3{
 }
 button{
     width: 100%;
-    height: 400px;
+    height: 50px;
     background: white;
     border: none;
     outline: none;
     border-radius: 40px;
     cursor: pointer;
-    font-size: 1cm;
+    font-size: 22px;
     color: black;
     font-weight: 500;
 }
 .register-link{
-    font-size: .9cm;
+    font-size: 20px;
     color: white;
     text-align: center;
-    margin: 25px 0 10px;
+    margin: 0 0 5px;
 }
 .register-link p a{
     color: white;
@@ -109,4 +126,13 @@ button{
 }
 .register-link p a:hover{
     text-decoration: underline;
+}
+@media(max-width: 360px){
+    .login-box{
+        width: 100%;
+        height: 100vh;
+        border: none;
+        border-radius: 0;
+
+    }
 }
