--- a/card.css
+++ b/card.css
@@ -40,12 +40,13 @@ section::after{
 }
 .container .card{
     position: relative;
-    width: 400px;
+    width: 300px;
     height: 400px;
     margin: 20px 40px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     background: rgba(255, 255, 255, 0.5);
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(15px );
@@ -71,5 +72,23 @@ section::after{
     transform: translate(-20px, -40px) rotate(-25deg) scale(1.4);
 }
 .container .card:hover .imgBx h1{
-    
+    color: white;
+    font-weight: 600;
+}
+.container .card .content{
+    position: absolute;
+    bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    transition: 0.5s ease-in-out;
+}
+.container .card .content .size,
+.container .card .content .color{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+
 }
