--- a/card.css
+++ b/card.css
@@ -90,5 +90,30 @@ section::after{
     justify-content: center;
     align-items: center;
     padding: 0px 20px;
-
+}
+.container .card .content .size h2,
+.container .card .content .color h2{
+    color: white;
+    font-weight: 300;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-right: 10px;
+}
+.container .card .content .size span{
+    width: 26px;
+    height: 26px;
+    text-align: center;
+    line-height: 24px;
+    display: inline-block;
+    color: black;
+    background: white;
+    border-radius: 4px;
+    font-size: 14px;
+    margin: 0 5px;
+    font-weight: 500;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.container .card .content .size span:hover{
+    
 }
