--- a/card.css
+++ b/card.css
@@ -83,6 +83,14 @@ section::after{
     align-items: center;
     flex-direction: column;
     transition: 0.5s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
+}
+.container .card:hover .content{
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(-50px);
+    
 }
 .container .card .content .size,
 .container .card .content .color{
@@ -115,5 +123,37 @@ section::after{
     cursor: pointer;
 }
 .container .card .content .size span:hover{
-    
+    background: greenyellow;   
+}
+.container .card .content .color span{
+    width: 20px;
+    height: 20px;
+    background: red;
+    border-radius: 50%;
+    margin: 5px 5px;
+    border: 2px solid white;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.container .card .content .color span:nth-child(2){
+    background: greenyellow;
+}
+.container .card .content .color span:nth-child(3){
+    background: skyblue;
+}
+.container .card .content .color span:nth-child(4){
+    background: red;
+}
+.container .card .content a{
+    position: relative;
+    top: 20px;
+    display: inline-block;
+    padding: 12px 30px;
+    background: white;
+    border-radius: 40px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
 }
